src/test/resources/basic/error/incompatible_types/Target.kt
package basic.error.incompatible_types

class Target {
    var x: String = ""
}